# trx-odoo-apps

./: README.md
demo_autoreload/: __manifest__.py
odoo-invoice-compact-layout/: CHANGELOG.md  INSTALACION.md  README.md  __init__.py  __manifest__.py  install.sh
odoo-llm/: .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  ODOO_APP_STORE_HTML_GUIDE.md  OVERVIEW.md  README.md  requirements.txt  run_tests.sh
odoo-llm/llm_generate_job/: README.md  __manifest__.py  changelog.rst  pyproject.toml
odoo-llm/llm_generate_job/data/: llm_generation_cron.xml
odoo-llm/llm_generate_job/models/: __init__.py  llm_generation_job.py  llm_generation_queue.py  llm_provider.py  llm_thread.py
odoo-llm/llm_generate_job/security/: ir.model.access.csv
odoo-llm/llm_generate_job/tests/: test_model_based_queue.py
odoo-llm/llm_generate_job/views/: llm_generation_job_views.xml  llm_generation_menu_views.xml  llm_generation_queue_views.xml
pos_create_so/: CHANGELOG.md  INSTALL.md  README.md  __manifest__.py  install_module.sh
sale_barcode_scanner/: __manifest__.py
sale_default_packaging/: README.md  __manifest__.py
sale_discount_limit/: README.md  __manifest__.py
sale_order_price_control/: __manifest__.py
sale_order_restrict_edit/: CHANGELOG.md  README.md  __init__.py  __manifest__.py
stock_packaging_invoice_report/: CHANGELOG.md  INSTALL.md  README.md  TECHNICAL_NOTES.md  __manifest__.py  install_module.sh
stock_packaging_report/: __manifest__.py
trixo_product_label/: __manifest__.py
trx_partner_razonsocial/: README.md  (+1 more)
(+371 files in other folders)
